# cvers

./: .gitignore  Cargo.toml  README.md
src/: args.rs  compare.rs  display.rs  main.rs
src/compare/: compare.rs  config.rs  mod.rs  parse.rs  structs.rs
src/errors/: mod.rs
tests/: compare_test.rs
