[package]
name = "cvers"
version = "0.1.0"
authors = ["Stéphane Blondon"]
edition = "2018"
licence = "GPL-2.0+"
licence-file = "LICENCE"
repository = "https://github.com/sblondon/cvers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
